新增打包及运行的配置

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
  * @Author: WuDaoTingFeng.yzh 2683849644@qq.com
  * @Date: 2024-01-09 16:36:00
  * @LastEditors: WuDaoTingFeng.yzh 2683849644@qq.com
- * @LastEditTime: 2024-01-09 16:36:15
+ * @LastEditTime: 2024-01-10 09:25:59
  * @FilePath: \webpack5_vue\public\index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -11,6 +11,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <!-- 绝对路径引入图标文件 -->
+  <link data-n-head="ssr" rel="icon" type="image/x-icon" href="/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>webpack5-vue3-ts</title>
